# compliance-to-policy

./: .gitignore  .golangci.yaml  .goreleaser.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  PROJECT  README.md  go.mod  go.sum  main.go  pyproject.toml
.github/: security-insights.yml
.github/templates/: template.md  wf-post-process.yml
.github/workflows/: cleanup.yml  create-and-publish-image.yml  goreleaser-workflow.yml  goreleaser.yml  init.yml  oscal-to-policy.yml  policy-to-report.yml  publish.yml  release.yml  run-oscal-to-policy.yml  run-policy-to-report.yml  validate.yml
api/v1alpha1/: compliancereport_types.go  controlreference_types.go  controlreferencekcp_types.go  groupversion_info.go  resultcollector_types.go  zz_generated.deepcopy.go
assets/: architecture.drawio
c2p/: __main__.py  cli.py
c2p/commands/: version.py
c2p/common/: c2p_base_model.py  err.py  logging.py  oscal.py  utils.py
c2p/framework/: __init__.py  c2p.py  oscal_utils.py  plugin_spec.py
c2p/tools/: oscal_csv_to_json.py
cmd/c2pcli/: main.go
cmd/compose/: c2pcr.yaml  compose.go  main.go
cmd/compose-by-c2pcr/: c2pcr.yaml  main.go
cmd/compose-kyverno/: main.go
cmd/compose-v2/: main.go
cmd/decompose/: decompose.go
cmd/oscal2posture/: main.go
cmd/parse/: parse.go
cmd/parse-single/: parse-single.go
cmd/publisher/: publisher.go
cmd/report/: c2pcr.yaml  main.go
cmd/report-utils/: main.go
cmd/result2oscal/: main.go
cmd/tools/: main.go
cmd/viewer/: viewer.go
config/default/: kustomization.yaml
config/ocm/: policy.open-cluster-management.io_policies.yaml
config/rbac/: auth_proxy_role.yaml  compliancedeployment_editor_role.yaml  compliancedeployment_viewer_role.yaml  controlreference_editor_role.yaml  leader_election_role_binding.yaml  role_binding.yaml  service_account.yaml
config/samples/: compliance-to-policy_v1alpha1_controlreference.yaml  kustomization.yaml
controllers/compliancedeployment/: controller.go  controller_test.go
controllers/composer/: helper.go  (+1 more)
docs/: ocm.md
go/: .gitignore  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  main.go
hack/: add-header.sh  boilerplate.sh.txt
oscal/: component-definition.json
pkg/: gitutils.go  utils.go
scripts/: README.md  collect.sh  deploy.sh  init.sh  install-argocd.sh  setup-argocd.sh
(+537 files in other folders)
